[package]
name = "kernel"
version = "0.1.0"
authors = ["Marek Kaput <marek.kaput@outlook.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "~0.9"
bitflags = "~1.0"
hashmap_core = "~0.1"
linked_list_allocator = "~0.4"
multiboot2 = "~0.3"
rlibc = "~1.0"
spin = "~0.4.6"
volatile = "~0.2.3"
x86_64 = "~0.1.2"

[dependencies.lazy_static]
version = "~1.0.0"
default-features = false
features = ["spin_no_std"]
